the drop down lists work

--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
   <title>Currency Converter</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" async></script>
+  <script src="main.js" defer></script>
 </head>
 <body>
+<h1>Currency Converter</h1>
+<form class="convert-form">
+<select class="convert-from" name="subject" id="subject">
+  <option class="option-one" value="" selected="selected"></option>
+</select>
+<br>to</br>
+<select class="convert-to">
+  <option class="option-two"></option>
+</select>
 
+</form>
+
+
+<input></input>
+=
+<input disabled></input>
+
+<button>Convert!</button>
+</div>
 </body>
 </html>
